--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div class="container">
       <p id="agecal">Age Calculator</p>
       <div class="inputs-wrapper">
-        <input type="date" id="date-input" />
+        <h4 class="heading">Date of Birth</h4>
+        <input type="date" id="birth-date-input" />
+        <h4 class="heading">Age at the Date of</h4>
+        <input type="date" id="current-date-input" />
         <button onclick="ageCalculate()">Calculate</button>
       </div>
       <div class="outputs-wrapper">
